@@ -5,6 +5,8 @@ Release date:
 
 New features:
 
+* Add option to disable UI updates during playback
+
 Bug fixes:
 
 Other:
